tests/typing/bad/testfile-field-6.c

union S { int a; };
int main() { union S *s; s.a; }
